crates/shell/src/parser/snapshots/omp_shell_engine__parser__tokenizer__tests__tokenize_whitespace.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"1 2 3\")?"
---
TokenizerResult(
  input: "1 2 3",
  result: [
    Word("1", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 1,
        line: 1,
        column: 2,
      ),
    )),
    Word("2", SourceSpan(
      start: SourcePosition(
        index: 2,
        line: 1,
        column: 3,
      ),
      end: SourcePosition(
        index: 3,
        line: 1,
        column: 4,
      ),
    )),
    Word("3", SourceSpan(
      start: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
      end: SourcePosition(
        index: 5,
        line: 1,
        column: 6,
      ),
    )),
  ],
)
